2007-11-08  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added check when copying over rt.jar to bootstrap/ecj
	* Makefile.in: Regenerated.

2007-11-08  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-bytecodeInterpreter.patch: New file.
	* patches/icedtea-signature-iterator.patch: Likewise.
	* patches/icedtea-signed-types.patch: Likewise.
	* patches/icedtea-test-atomic-operations.patch: Likewise.
	* patches/icedtea-core-build.patch: Likewise.
	* patches/icedtea-linker-options.patch: Likewise.
	* patches/icedtea-ports.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.
	* Makefile.in: Regenerated.

2007-11-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Removed docs patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-docs.patch: Removed. Causing out of memory errors
	because jaxws is not built.

2007-11-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added new patch to list.
	* Makefile.in: Regenerate.
	* patches/icedtea-docs.patch: New patch to build docs.
	* .hgignore: Updated.

2007-11-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Re-added ecj targets, added new patches to the list and
	updated tools.jar.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* configure.ac: Re-added --with-icedtea and --with-icedtea-home
	options. Also, added --with-gcj-home to specify where gcj is
	installed- the default is /usr/lib/jvm/java-gcj/.
	* generated/*.java: Regenerated and added several new sources.
	* generated/fontconfig/*.bfc: Added generated font files.
	* javac.in: Re-added. Added support to ignore Werror flags.
	* javap.in: Re-added.
	* patches/icedtea-javafiles: Updated to add missing sources to
	Makefiles.
	* patches/icedtea-sunrc.patch: Updated.
	* patches/icedtea-corba.patch: New patch.
	* patches/icedtea-ecj.patch: New patch to make building with ecj
	possible.
	* tools-copy/tools-corba-copy-files.txt: List of corba sources to
	copy.