@@ -153,8 +153,7 @@ stamps/extract.stamp: stamps/download.stamp
 	if ! test -d openjdk ; \
 	then \
 	  $(UNZIP) -q $(OPENJDK_SRC_ZIP) ; \
-	  chmod ug+w `find openjdk/j2se/src/share/demo/jvmti \
-	     -name sample.makefile.txt` ; \
+	  chmod -R ug+w openjdk ; \
 	fi
 	mkdir -p stamps
 	touch stamps/extract.stamp
@@ -256,8 +255,7 @@ stamps/extract-ecj.stamp: stamps/download.stamp
 	  $(UNZIP) -q -d tmp-ecj $(OPENJDK_SRC_ZIP) ; \
 	  mv tmp-ecj/openjdk openjdk-ecj ; \
 	  rmdir tmp-ecj ; \
-	  chmod ug+w `find openjdk-ecj/j2se/src/share/demo/jvmti \
-	     -name sample.makefile.txt` ; \
+	  chmod -R ug+w openjdk-ecj ; \
 	  rm -rf openjdk-ecj/jaxws; \
 	fi
 	mkdir -p stamps
